Move page title to rendered page

--- a/azurelyte/home.html
+++ b/azurelyte/home.html
@@ -1,3 +1,5 @@
+<title>AzureLyte</title>
+
 <h1 class="docHead">AzureLyte</h1>
 <h1>Welcome to the writetest page.</h1>
 <h2>It's a page for writetesting.</h2>
