Add titles to pages 1 & 2

--- a/azurelyte/page1.html
+++ b/azurelyte/page1.html
@@ -1,3 +1,5 @@
+<title>Page 1</title>
+
 <h1>This is Page 1.</h1>
 <p>Click these buttons to change page content (<strong>without</strong> changing the url!).</p>
 <h2>>:P</h2>
