--- a/azurelyte/page2.html
+++ b/azurelyte/page2.html
@@ -1,3 +1,5 @@
+<title>Page 2</title>
+
 <h1>This is Page 2</h1>
 <p>Click these buttons to change page content (<strong>without</strong> changing the url!).</p>
 <h2>\\(*v*)/</h2>
