Remove “outdated” warning

--- a/savethefish/index.html
+++ b/savethefish/index.html
@@ -72,7 +72,7 @@
                 <a target="_blank" href="poster5.png">
                     <img src="poster5.png" alt="poster 5" width="600" height="400">
                 </a>
-                <div class="desc">poster 5<br>website link (outdated)</div>
+                <div class="desc">poster 5<br>website link</div>
             </div>
         </div>
 
