--- a/azurelyte/writetest2.html
+++ b/azurelyte/writetest2.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="./writetest2.js"></script>
-</head>
-<body>
-    <button onclick="writeToDiv()">Write to the div!</button><br>
-    <button onclick="eraseFromDiv()">Erase from the div!</button>
-    <div id="myDiv">Something</div>
-</body>
-</html>
+<title>Document</title>
+<script>
+    function writeToDiv() {
+        document.querySelector("#myDiv").innerHTML += "<br>More something";
+    }
+    function eraseFromDiv() {
+        document.querySelector("#myDiv").innerHTML = document.querySelector("#myDiv").innerHTML.substr(0,document.querySelector("#myDiv").innerHTML.length - 5);
+    }
+</script>
+
+<button onclick="writeToDiv()">Write to the div!</button><br>
+<button onclick="eraseFromDiv()">Erase from the div!</button>
+<div id="myDiv">Something</div>
