--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AzureLyte | 404 Not Found</title>
+    <title>404 Not Found</title>
     <link rel="stylesheet" src="./azurelyte/styles.css" />
     <link rel="stylesheet" src="./azurelyte/lightmode.css" />
 </head>
