--- a/azurelyte/writetest2/index.html
+++ b/azurelyte/writetest2/index.html
@@ -1,5 +1,14 @@
-<title>Writetest 2</title>
-<script src="https://crystallity.github.io/writetest2/scripts.js"></script>
-<button onclick="writeToDiv()">Write to the div!</button><br>
-<button onclick="eraseFromDiv()">Erase from the div!</button>
-<div id="myDiv">Something</div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Writetest 2</title>
+        <link rel="icon" type="image/x-icon" src="../favicon.ico"
+
+        <script src="https://crystallity.github.io/writetest2/scripts.js"></script>
+    </head>
+    <body>
+        <button onclick="writeToDiv()">Write to the div!</button><br>
+        <button onclick="eraseFromDiv()">Erase from the div!</button>
+        <div id="myDiv">Something</div>
+    </body>
+</html>
