Add full URLs to 404.html

--- a/404.html
+++ b/404.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>404 Not Found</title>
-    <link rel="stylesheet" src="./azurelyte/styles.css" />
-    <link rel="stylesheet" src="./azurelyte/lightmode.css" />
+    <link rel="stylesheet" src="https://crystallity.github.io/azurelyte/styles.css" />
+    <link rel="stylesheet" src="https://crystallity.github.io/azurelyte/lightmode.css" />
 </head>
 <body>
     <h1 class="dochead">404</h1>
     <h2>This page doesn't exist!</h2>
     <p>The requested resource doesn't seem to be here. It might have been moved or deleted.</p>
-    <a href="./index.html">Homepage</a>
-    <a href="./azurelyte/index.html">AzureLyte Homepage</a>
+    <a href="https://crystallity.github.io/index.html">Homepage</a>
+    <a href="https://crystallity.github.io/azurelyte/index.html">AzureLyte Homepage</a>
 </body>
 </html>
