Fix <link> syntax error

--- a/azurelyte/writetest2/index.html
+++ b/azurelyte/writetest2/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Writetest 2</title>
-        <link rel="icon" type="image/x-icon" src="../favicon.ico"
+        <link rel="icon" type="image/x-icon" src="../favicon.ico" />
 
         <script src="https://crystallity.github.io/writetest2/scripts.js"></script>
     </head>
