Remove "index.html" from links

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <h1 class="dochead">404</h1>
     <h2>This page doesn't exist!</h2>
     <p>The requested resource doesn't seem to be here. It might have been moved or deleted.</p>
-    <a href="https://crystallity.github.io/index.html">Homepage</a>
-    <a href="https://crystallity.github.io/azurelyte/index.html">AzureLyte Homepage</a>
+    <a href="https://crystallity.github.io/">Homepage</a>
+    <a href="https://crystallity.github.io/azurelyte/">AzureLyte Homepage</a>
 </body>
 </html>
