Add debug function

--- a/azurelyte/writetest2/index.html
+++ b/azurelyte/writetest2/index.html
@@ -6,7 +6,7 @@
 
         <script src="https://crystallity.github.io/writetest2/scripts.js"></script>
     </head>
-    <body>
+    <body onload="debug('loaded!')">
         <button onclick="writeToDiv()">Write to the div!</button><br>
         <button onclick="eraseFromDiv()">Erase from the div!</button>
         <div id="myDiv">Something</div>
