--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -28,7 +28,7 @@
             <span class="material-symbols-rounded navbarIcon nonMenuIcon">mail</span>
             <span class="material-symbols-rounded navbarIcon nonMenuIcon">public</span>
             <span class="material-symbols-rounded navbarIcon nonMenuIcon">feed</span>
-            <span class="material-symbols-rounded navbarIcon nonMenuIcon">receipt_long</span>
+            <span onclick="overwriteCl(page_changelog)" class="material-symbols-rounded navbarIcon nonMenuIcon">receipt_long</span>
             <span onclick="window.location.replace('https://crystallity.github.io')" class="material-symbols-rounded navbarIcon nonMenuIcon">account_circle</span>
         </div>
         <div id="navbar-expanded"></div>
