--- a/azurelyte/changelog.html
+++ b/azurelyte/changelog.html
@@ -1,6 +1,7 @@
 <title>Changelog | AzureLyte</title>
 <div style="text-align: center;">
     <h1 class="docHead">AzureLyte</h1>
+    <h1>AzureLyte Changelog</h1>
     <details>
         <summary>v0.0.0</summary>
         <p>
