--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./styles.css" />
 
         <link rel="stylesheet" href="./lightmode.css" id="theme" />
+        <link rel="stylesheet" id="midnightTheme" />
 
         <!--
             Useful Material Symbols:
