Add v0.1.0 to changelog

--- a/azurelyte/changelog.html
+++ b/azurelyte/changelog.html
@@ -3,6 +3,13 @@
     <h1 class="docHead">AzureLyte</h1>
     <h1>AzureLyte Changelog</h1>
     <details>
+        <details>
+            <summary>v0.1.0 (experimental)</summary>
+            <p>
+                Still in development! Added midnight theme, a darker variant of the
+                dark theme.
+            </p>
+        </details>
         <summary>v0.0.0</summary>
         <p>
             Beta version of the site. This is when the changelog starts being used.
