--- a/azurelyte/changelog.html
+++ b/azurelyte/changelog.html
@@ -4,10 +4,9 @@
     <h1>AzureLyte Changelog</h1>
     <details>
         <details>
-            <summary>v0.1.0 (experimental)</summary>
+            <summary>v0.1.0</summary>
             <p>
-                Still in development! Added midnight theme, a darker variant of the
-                dark theme.
+                Added midnight theme, a darker variant of the dark mode.
             </p>
         </details>
         <summary>v0.0.0</summary>
