Add v0.1.1 to changelog

--- a/azurelyte/changelog.html
+++ b/azurelyte/changelog.html
@@ -2,6 +2,13 @@
 <div style="text-align: center;">
     <h1 class="docHead">AzureLyte</h1>
     <h1>AzureLyte Changelog</h1>
+
+    <details>
+        <summary>v0.1.1 - Theme sync</summary>
+        <p>
+            The theme of the website now syncs to your device preferences.
+        </p>
+    </details>
     
     <details>
         <summary>v0.1.0 - Midnight update</summary>
