--- a/azurelyte/changelog.html
+++ b/azurelyte/changelog.html
@@ -4,26 +4,46 @@
     <h1>AzureLyte Changelog</h1>
 
     <details>
-        <summary>v0.1.1 - Theme sync</summary>
-        <p>
-            The theme of the website now syncs to your device preferences.
-        </p>
-    </details>
-    
-    <details>
-        <summary>v0.1.0 - Midnight update</summary>
-        <p>
-            Added midnight theme, a darker variant of the dark mode.
-        </p>
-    </details>
+        <summary>v0</summary>
 
-    <details>
-        <summary>v0.0.0 - Beta</summary>
-        <p>
-            Beta version of the site. This is when the changelog starts being used.
-            Included features: Homepage, changelog, page loading, light/darkmode.
-            Added in this update: changelog functionality.
-        </p>
+        <details>
+            <summary>v0.1</summary>
+
+            <details>
+                <summary>v0.1.2 - Experimental</summary>
+                <p>
+                    This update is in development! Changes added: new changelog structure
+                </p>
+            </details>
+
+            <details>
+                <summary>v0.1.1 - Theme sync</summary>
+                <p>
+                    The theme of the website now syncs to your device preferences.
+                </p>
+            </details>
+
+            <details>
+                <summary>v0.1.0 - Midnight update</summary>
+                <p>
+                    Added midnight theme, a darker variant of the dark mode.
+                </p>
+            </details>
+        </details>
+
+        <details>
+            <summary>v0.0</summary>
+
+            <details>
+                <summary>v0.0.0 - Beta</summary>
+                <p>
+                    Beta version of the site. This is when the changelog starts being used.
+                    Included features: Homepage, changelog, page loading, light/darkmode.
+                    Added in this update: changelog functionality.
+                </p>
+            </details>
+
+        </details>
+
     </details>
-    
 </div>
