--- a/azurelyte/changelog.html
+++ b/azurelyte/changelog.html
@@ -5,43 +5,56 @@
 
     <details>
         <summary>v0</summary>
-
-        <details>
-            <summary>v0.1</summary>
-
+        <div class="details-content">
             <details>
-                <summary>v0.1.2 - Experimental</summary>
-                <p>
-                    This update is in development! Changes added: new changelog structure
-                </p>
-            </details>
+                <summary>v0.1</summary>
 
-            <details>
-                <summary>v0.1.1 - Theme sync</summary>
-                <p>
-                    The theme of the website now syncs to your device preferences.
-                </p>
-            </details>
+                <div class="details-content">
+                    <details>
+                        <summary>v0.1.2 - Experimental</summary>
+                        <div class="details-content">
+                            <p>
+                                This update is in development! Changes added: new changelog structure
+                            </p>
+                        </div>
+                    </details>
 
-            <details>
-                <summary>v0.1.0 - Midnight update</summary>
-                <p>
-                    Added midnight theme, a darker variant of the dark mode.
-                </p>
+                    <details>
+                        <summary>v0.1.1 - Theme sync</summary>
+                        <div class="details-content">
+                            <p>
+                                The theme of the website now syncs to your device preferences.
+                            </p>
+                        </div>
+                    </details>
+                </div>
+
+                <details>
+                    <summary>v0.1.0 - Midnight update</summary>
+                    <div class="details-content">
+                        <p>
+                            Added midnight theme, a darker variant of the dark mode.
+                        </p>
+                    </div>
+                </details>
             </details>
-        </details>
+        </div>
 
         <details>
             <summary>v0.0</summary>
 
-            <details>
-                <summary>v0.0.0 - Beta</summary>
-                <p>
-                    Beta version of the site. This is when the changelog starts being used.
-                    Included features: Homepage, changelog, page loading, light/darkmode.
-                    Added in this update: changelog functionality.
-                </p>
-            </details>
+            <div class="details-content">
+                <details>
+                    <summary>v0.0.0 - Beta</summary>
+                    <div class="details-content">
+                        <p>
+                            Beta version of the site. This is when the changelog starts being used.
+                            Included features: Homepage, changelog, page loading, light/darkmode.
+                            Added in this update: changelog functionality.
+                        </p>
+                    </div>
+                </details>
+            </div>
 
         </details>
 
