--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -33,9 +33,15 @@
             <span onclick="window.location.replace('https://crystallity.github.io')" class="material-symbols-rounded navbarIcon nonMenuIcon">account_circle</span>
         </div>
         <div id="navbar-expanded"></div>
+
         <div id="main">
             <h1 class="docHead">Loading...</h1>
             <h1>AzureLyte preloads webpages to make switching between them faster.</h1>
         </div>
+
+        <div id="themeButton">
+            <span class="material-symbols-rounded">contrast</span>
+        </div>
+
     </body>
 </html>
