--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div id="themeButton">
-            <span class="material-symbols-rounded">contrast</span>
+            <span class="material-symbols-rounded" style="font-size: 60px;">contrast</span>
         </div>
 
     </body>
