--- a/azurelyte/changelog.html
+++ b/azurelyte/changelog.html
@@ -7,23 +7,37 @@
         <summary>v0</summary>
         <div class="details-content">
             <details>
+                <summary>v0.2</summary>
+
+                <div class="details-content">
+
+                    <details>
+                        <summary>v0.2.0 - Theme and architecture changes</summary>
+                        
+                        <div class="details-content">
+                            <p>
+                                This update is still in development! Changes so far: 
+                                new changelog structure, added button for changing theme
+                            </p>
+                        </div>
+
+                    </details>
+
+                </div>
+                
+            </details>
+
+            <details>
                 <summary>v0.1</summary>
 
                 <div class="details-content">
-                    <details>
-                        <summary>v0.1.2 - Experimental</summary>
-                        <div class="details-content">
-                            <p>
-                                This update is in development! Changes added: new changelog structure
-                            </p>
-                        </div>
-                    </details>
 
                     <details>
                         <summary>v0.1.1 - Theme sync</summary>
                         <div class="details-content">
                             <p>
-                                The theme of the website now syncs to your device preferences.
+                                The theme of the website now syncs to your device 
+                                preferences.
                             </p>
                         </div>
                     </details>
@@ -45,13 +59,16 @@
                 <div class="details-content">
                     <details>
                         <summary>v0.0.0 - Beta</summary>
+
                         <div class="details-content">
                             <p>
-                                Beta version of the site. This is when the changelog starts being used.
-                                Included features: Homepage, changelog, page loading, light/darkmode.
-                                Added in this update: changelog functionality.
+                                Beta version of the site. This is when the changelog starts
+                                 being used.Included features: Homepage, changelog, page 
+                                 loading, light/darkmode.Added in this update: changelog 
+                                 functionality.
                             </p>
                         </div>
+
                     </details>
                 </div>
 
