--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -17,7 +17,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <script src="./pages.js"></script>
-        <script src="./navbar.js"></script>
+        <script src="./global.js"></script>
         <script>window.onresize = closeNav;</script>
     </head>
     <body onload="loadContent()">
