Add basic function to theme button

--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div id="themeButton">
-            <span class="material-symbols-rounded" id="themeButtonSymbol">contrast</span>
+            <span class="material-symbols-rounded" id="themeButtonSymbol" onclick="toggleTheme()">contrast</span>
         </div>
 
     </body>
