--- a/azurelyte/changelog.html
+++ b/azurelyte/changelog.html
@@ -17,7 +17,8 @@
                         <div class="details-content">
                             <p>
                                 This update is still in development! Changes so far: 
-                                new changelog structure, added button for changing theme
+                                new changelog structure, added button for changing theme,
+                                moved navbar and theme code to global.js
                             </p>
                         </div>
 
