--- a/azurelyte/changelog.html
+++ b/azurelyte/changelog.html
@@ -18,7 +18,7 @@
                             <p>
                                 This update is still in development! Changes so far: 
                                 new changelog structure, added button for changing theme,
-                                moved navbar and theme code to global.js
+                                moved navbar and theme code to global.js.
                             </p>
                         </div>
 
