--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -4,9 +4,9 @@
     <head>
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,700,0,0" />
-        <link rel="stylesheet" href="./styles.css" />
+        <link rel="stylesheet" href="./styles/global.css" />
 
-        <link rel="stylesheet" href="./lightmode.css" id="theme" />
+        <link rel="stylesheet" href="./styles/lightmode.css" id="theme" />
         <link rel="stylesheet" id="midnightTheme" />
 
         <!--
