--- a/rnacoder.html
+++ b/rnacoder.html
@@ -62,6 +62,7 @@
 
         function copy() {
             navigator.clipboard.writeText(document.querySelector('#output').value);
+            alert('Copied to clipboard!')
         }
     </script>
 
