--- a/rnacoder.html
+++ b/rnacoder.html
@@ -75,7 +75,7 @@
 
     <button id="dm">DNA to mRNA</button>
     <button id="mt">mRNA to tRNA</button>
-    <button id="ma">mRNA to amino acid (WIP)</button><br>
+    <button id="ma" class="hidden">mRNA to amino acid</button><br>
 
     <textarea id="output"></textarea><br>
     <button id="copy">Copy to clipboard</button>
