Fix broken line formatting

--- a/rnacoder.html
+++ b/rnacoder.html
@@ -80,7 +80,7 @@
     <h2>RNA coder</h2>
     <p>Put a DNA or RNA sequence into the first textbox, then select the button to convert it. You can include spaces to seperate codons.</p>
 
-    <button id="paste">Paste from clipboard</button>
+    <button id="paste">Paste from clipboard</button><br>
     <textarea id="input"></textarea><br>
 
     <button id="dm">DNA to mRNA</button>
