--- a/rnacoder.html
+++ b/rnacoder.html
@@ -4,6 +4,8 @@
     <title>RNA Coder</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
+    <style src="/azurelyte/styles/global.css"></style>
+    <style src="/azurelyte/styles/lightmode.css"></style>
     <style>
         .hidden { display:none; }
     </style>
@@ -77,7 +79,7 @@
 
 </head>
 <body onload="setUp()">
-    <h2>RNA coder</h2>
+    <h1>RNA coder</h1>
     <p>Put a DNA or RNA sequence into the first textbox, then select the button to convert it. You can include spaces to seperate codons.</p>
 
     <button id="paste">Paste from clipboard</button><br>
