Add codon chart and change style paths

--- a/rnacoder/index.html
+++ b/rnacoder/index.html
@@ -4,8 +4,8 @@
     <title>RNA Coder</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-    <style src="/azurelyte/styles/global.css"></style>
-    <style src="/azurelyte/styles/lightmode.css"></style>
+    <style src="./azurelyte/styles/global.css"></style>
+    <style src="./azurelyte/styles/lightmode.css"></style>
     <style>
         .hidden { display:none; }
     </style>
