--- a/redirect.html
+++ b/redirect.html
@@ -4,8 +4,8 @@
 <head>
 <title> </title>
 <script>
-  window.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ', ' ');
-  window.close;
+  window.location.href = ('https://www.youtube.com/watch?v=dQw4w9WgXcQ');
+  document.title = ' ';
 </script>
 </head>
 </html>
