--- a/progress.html
+++ b/progress.html
@@ -9,7 +9,7 @@
   <script>
     async function upload(percent) {
       try {
-        const response = await fetch('https://kv.replit.com/v0/eyJhbGciOiJIUzUxMiIsImlzcyI6ImNvbm1hbiIsImtpZCI6InByb2Q6MSIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJjb25tYW4iLCJleHAiOjE3MzE3MTYzMjQsImlhdCI6MTczMTYwNDcyNCwiZGF0YWJhc2VfaWQiOiIxOWZlNDkyNC1mMGI0LTRjZjYtOWZhMy0zMzU0N2Q1MDE3OGUifQ.Wp_8ujNP2zjoz2ELdRdTUKSIj9kvxyHwXnMQO5oMOIhhp7Zsf4dk8iTh2ZAKkQMR-SJrwnW6Tzb2xBMK8TCpBQ', {method: 'POST'});
+        const response = await fetch('https://kv.replit.com/v0/eyJhbGciOiJIUzUxMiIsImlzcyI6ImNvbm1hbiIsImtpZCI6InByb2Q6MSIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJjb25tYW4iLCJleHAiOjE3MzE3MTYzMjQsImlhdCI6MTczMTYwNDcyNCwiZGF0YWJhc2VfaWQiOiIxOWZlNDkyNC1mMGI0LTRjZjYtOWZhMy0zMzU0N2Q1MDE3OGUifQ.Wp_8ujNP2zjoz2ELdRdTUKSIj9kvxyHwXnMQO5oMOIhhp7Zsf4dk8iTh2ZAKkQMR-SJrwnW6Tzb2xBMK8TCpBQ/progress=' + percent, {method: 'POST'});
         if (!response.ok) {
           throw new Error('Response: ' + response.status);
         }
@@ -23,6 +23,6 @@
 </head>
 <body>
   <input type="number" id="input"></input>
-  <button id="send">Send</button>
+  <button id="send" onclick="upload(document.getElementById(input).content)">Send</button>
 </body>
 </html>
