--- a/progress.html
+++ b/progress.html
@@ -19,12 +19,41 @@
         console.error(error.message);
       }
     }
+
+    let counter = 0;
+
+   function update() {
+     download();
+     setInterval(download, 30000);
+     setInterval(timer, 1000);
+   }
+
+    async function download() {
+      try {
+       const response = await fetch('https://kv.replit.com/v0/eyJhbGciOiJIUzUxMiIsImlzcyI6ImNvbm1hbiIsImtpZCI6InByb2Q6MSIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJjb25tYW4iLCJleHAiOjE3MzE3MTYzMjQsImlhdCI6MTczMTYwNDcyNCwiZGF0YWJhc2VfaWQiOiIxOWZlNDkyNC1mMGI0LTRjZjYtOWZhMy0zMzU0N2Q1MDE3OGUifQ.Wp_8ujNP2zjoz2ELdRdTUKSIj9kvxyHwXnMQO5oMOIhhp7Zsf4dk8iTh2ZAKkQMR-SJrwnW6Tzb2xBMK8TCpBQ/progress=' + percent, {method: 'POST'});
+        if (!response.ok) {
+          throw new Error('Response: ' + response.status);
+        }
+
+        console.log(response.status);
+        document.getElementById('progress').value = response.body;
+        counter = 0;
+      } catch(error) {
+        console.error(error.message);
+      }
+    }
+
+    function timer() {
+      counter += 1;
+      document.getElementById('timer').innerHTML = 'Last updated: ' + counter.toString() + 's';
+    }
   </script>
 </head>
 <body>
   <input type="number" id="input"></input>
-  <button id="send" onclick="upload(document.getElementById(input).value)">Send</button>
+  <button id="send" onclick="upload(document.getElementById(input).value)">Send</button><br>
   <label for="progress">Progress:</label>
-  <progress id="progress" max="100" value="50"></progress>
+  <progress id="progress" max="100" value="50" onload="update()"></progress>
+  <p id="timer">Last updated: 0s</p>
 </body>
 </html>
