--- a/progress.html
+++ b/progress.html
@@ -9,12 +9,14 @@
   <script>
     async function upload(percent) {
       try {
-        const response = await fetch('https://kv.replit.com/v0/eyJhbGciOiJIUzUxMiIsImlzcyI6ImNvbm1hbiIsImtpZCI6InByb2Q6MSIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJjb25tYW4iLCJleHAiOjE3MzE3MTYzMjQsImlhdCI6MTczMTYwNDcyNCwiZGF0YWJhc2VfaWQiOiIxOWZlNDkyNC1mMGI0LTRjZjYtOWZhMy0zMzU0N2Q1MDE3OGUifQ.Wp_8ujNP2zjoz2ELdRdTUKSIj9kvxyHwXnMQO5oMOIhhp7Zsf4dk8iTh2ZAKkQMR-SJrwnW6Tzb2xBMK8TCpBQ/progress=' + percent, {method: 'POST'});
-        if (!response.ok) {
-          throw new Error('Response: ' + response.status);
-        }
+        fetch('https://kv.replit.com/v0/eyJhbGciOiJIUzUxMiIsImlzcyI6ImNvbm1hbiIsImtpZCI6InByb2Q6MSIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJjb25tYW4iLCJleHAiOjE3MzE3MTYzMjQsImlhdCI6MTczMTYwNDcyNCwiZGF0YWJhc2VfaWQiOiIxOWZlNDkyNC1mMGI0LTRjZjYtOWZhMy0zMzU0N2Q1MDE3OGUifQ.Wp_8ujNP2zjoz2ELdRdTUKSIj9kvxyHwXnMQO5oMOIhhp7Zsf4dk8iTh2ZAKkQMR-SJrwnW6Tzb2xBMK8TCpBQ/progress=' + percent, {method: 'POST'})
+          .then(response => {
+            if (!response.ok) {
+              throw new Error('Response: ' + response.status + ' ' + response.statusText);
+          }
 
-        console.log(response.status);
+          console.log(response.status, response.statusText);
+          });
       } catch(error) {
         console.error(error.message);
       }
@@ -30,14 +32,16 @@
 
     async function download() {
       try {
-       const response = await fetch('https://kv.replit.com/v0/eyJhbGciOiJIUzUxMiIsImlzcyI6ImNvbm1hbiIsImtpZCI6InByb2Q6MSIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJjb25tYW4iLCJleHAiOjE3MzE3MTYzMjQsImlhdCI6MTczMTYwNDcyNCwiZGF0YWJhc2VfaWQiOiIxOWZlNDkyNC1mMGI0LTRjZjYtOWZhMy0zMzU0N2Q1MDE3OGUifQ.Wp_8ujNP2zjoz2ELdRdTUKSIj9kvxyHwXnMQO5oMOIhhp7Zsf4dk8iTh2ZAKkQMR-SJrwnW6Tzb2xBMK8TCpBQ/progress=' + percent, {method: 'POST'});
-        if (!response.ok) {
-          throw new Error('Response: ' + response.status);
-        }
+       fetch('https://kv.replit.com/v0/eyJhbGciOiJIUzUxMiIsImlzcyI6ImNvbm1hbiIsImtpZCI6InByb2Q6MSIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJjb25tYW4iLCJleHAiOjE3MzE3MTYzMjQsImlhdCI6MTczMTYwNDcyNCwiZGF0YWJhc2VfaWQiOiIxOWZlNDkyNC1mMGI0LTRjZjYtOWZhMy0zMzU0N2Q1MDE3OGUifQ.Wp_8ujNP2zjoz2ELdRdTUKSIj9kvxyHwXnMQO5oMOIhhp7Zsf4dk8iTh2ZAKkQMR-SJrwnW6Tzb2xBMK8TCpBQ/progress')
+         .then(response => {
+           if (!response.ok) {
+            throw new Error('Response: ' + response.status + ' ' + response.statusText);
+          }
 
-        console.log(response.status);
-        document.getElementById('progress').value = response.body;
-        counter = 0;
+          console.log(response.status, response.statusText);
+          document.getElementById('progress').value = response.body;
+          counter = -1;
+         });
       } catch(error) {
         console.error(error.message);
       }
